--- a/style.css
+++ b/style.css
@@ -1,27 +1,10 @@
 h1 {
-    color: blue;
+    color: rgb(85, 85, 85);
     text-align: center;
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-}
-
-#left-container {
-    left: 0px;
-}
-
-#right-container {
-    right: 0px
-}
-
-.container {
-    background-color: #eee;
-    width: 15%;
-    top: 0px;
-    position: absolute;
-    height: 100%;
-    padding: 10px
 }
 
 .plant {
@@ -31,6 +14,7 @@ body {
   z-index: 999;
   opacity: 1;
   cursor: grab;
+  transition: left 1s linear, top 1s linear;
 }
 
 #terrarium {
